fixed article height overlap

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -347,7 +347,7 @@
     }
   }
   .articles {
-    height: 150vh;
+    height: 165vh;
 
     .article {
       text-align: center;
